fix: much longer animation; looks like flicker otherwise

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -43,7 +43,7 @@ html {
   right: 0;
   background-color: #020202;
   opacity: 1;
-  transition: opacity 0.2s ease;
+  transition: opacity 2s ease;
   &.fade {
     opacity: 0;
   }
